# advanced-electronic-signature

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  crypto.c  crypto.h  main.c
.github/workflows/: docs.yml
common/: CMakeLists.txt  clay-shared.c  clay-shared.h  crypto.c  crypto.h  util.c  util.h
common/lib/: clay-renderer.c  mbedtls_config.h
common/lib/nativefiledialog/: CMakeLists.txt
common/os/: unix.c  windows.c  windows.h
lib/: clay.h  clay_renderer_raylib.c  raylib.h  raymath.h
pin-app/: CMakeLists.txt  main.c
signature-app/: CMakeLists.txt  main.c
